--- a/public/css/add_number.css
+++ b/public/css/add_number.css
@@ -18,22 +18,21 @@ body {
 /* 헤더 스타일 */
 
 .header-box {
-            display: flex;
-            width: 100%;
-            height: 50px;
-            background-color: #4F46E5; /* 배경을 흰색으로 설정 */
-            border: 1px solid #4F46E5; /* 파란색 테두리 */
-            text-align: left;
-            padding: 0px;
-            padding-left: 20px;
-            align-items: center;
-        }
+    display: flex;
+    height: 50px;
+    background-color: #4f46e5; /* 배경을 흰색으로 설정 */
+    border: 1px solid #4f46e5; /* 파란색 테두리 */
+    text-align: left;
+    padding: 0px;
+    padding-left: 20px;
+    align-items: center;
+}
 
 .header-box a {
-            text-decoration: none; /* 링크 밑줄 제거 */
-            color: black; /* 링크 텍스트 색상 */
-            font-size: 30px;
-        }
+    text-decoration: none; /* 링크 밑줄 제거 */
+    color: black; /* 링크 텍스트 색상 */
+    font-size: 30px;
+}
 
 .header-box h1 {
     padding-top: 0px;
@@ -57,7 +56,7 @@ body {
 }
 
 .container {
-  padding-bottom: 60px; /* 푸터 높이만큼 */
+    padding-bottom: 60px; /* 푸터 높이만큼 */
 }
 
 .second-title {
@@ -69,7 +68,9 @@ body {
     color: #000; /* 필요하면 색상 변경 가능 */
 }
 
-input, textarea, button {
+input,
+textarea,
+button {
     /* width: 100%; */
     padding: 12px;
     margin: 10px 0;
