--- a/public/css/incoming_call.css
+++ b/public/css/incoming_call.css
@@ -18,22 +18,21 @@ body {
 /* 헤더 스타일 */
 
 .header-box {
-            display: flex;
-            width: 100%;
-            height: 50px;
-            background-color: #4F46E5; /* 배경을 흰색으로 설정 */
-            border: 1px solid #4F46E5; /* 파란색 테두리 */
-            text-align: left;
-            padding: 0px;
-            padding-left: 20px;
-            align-items: center;
-        }
+    display: flex;
+    height: 50px;
+    background-color: #4f46e5; /* 배경을 흰색으로 설정 */
+    border: 1px solid #4f46e5; /* 파란색 테두리 */
+    text-align: left;
+    padding: 0px;
+    padding-left: 20px;
+    align-items: center;
+}
 
 .header-box a {
-            text-decoration: none; /* 링크 밑줄 제거 */
-            color: black; /* 링크 텍스트 색상 */
-            font-size: 30px;
-        }
+    text-decoration: none; /* 링크 밑줄 제거 */
+    color: black; /* 링크 텍스트 색상 */
+    font-size: 30px;
+}
 
 .header-box h1 {
     padding-top: 0px;
@@ -57,7 +56,7 @@ body {
 }
 
 .container {
-  padding-bottom: 60px; /* 푸터 높이만큼 */
+    padding-bottom: 60px; /* 푸터 높이만큼 */
 }
 
 .second-title {
@@ -69,7 +68,9 @@ body {
     color: #000; /* 필요하면 색상 변경 가능 */
 }
 
-input, textarea, button {
+input,
+textarea,
+button {
     /* width: 100%; */
     padding: 12px;
     margin: 10px 0;
@@ -104,14 +105,13 @@ input, textarea, button {
     margin-right: auto;
     padding-top: 7px;
     padding-bottom: 7px;
-    background-color: #00DD00; /* 배경 색상 추가 */
+    background-color: #00dd00; /* 배경 색상 추가 */
     color: black; /* 텍스트 색상 설정 */
     cursor: pointer; /* 클릭 가능한 커서로 변경 */
     z-index: 10; /* 다른 요소 위에 표시되도록 설정 */
-    display: flex;  /* Flexbox를 사용하여 아이콘과 텍스트를 일직선으로 정렬 */
-    align-items: center;  /* 세로 중앙 정렬 */
-    justify-content: center;  /* 수평 중앙 정렬 */
-
+    display: flex; /* Flexbox를 사용하여 아이콘과 텍스트를 일직선으로 정렬 */
+    align-items: center; /* 세로 중앙 정렬 */
+    justify-content: center; /* 수평 중앙 정렬 */
 }
 
 .answer-the-call svg {
@@ -132,15 +132,15 @@ input, textarea, button {
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #FF0000; /* 배경 색상 추가 */
+    background-color: #ff0000; /* 배경 색상 추가 */
     color: white; /* 텍스트 색상 설정 */
     cursor: pointer; /* 클릭 가능한 커서로 변경 */
     z-index: 10; /* 다른 요소 위에 표시되도록 설정 */
     padding-top: 7px;
     padding-bottom: 7px;
-    display: flex;  /* Flexbox를 사용하여 아이콘과 텍스트를 일직선으로 정렬 */
-    align-items: center;  /* 세로 중앙 정렬 */
-    justify-content: center;  /* 수평 중앙 정렬 */
+    display: flex; /* Flexbox를 사용하여 아이콘과 텍스트를 일직선으로 정렬 */
+    align-items: center; /* 세로 중앙 정렬 */
+    justify-content: center; /* 수평 중앙 정렬 */
 }
 
 .reject-call svg {
@@ -151,5 +151,5 @@ input, textarea, button {
 }
 
 .reject-call:hover {
-    background-color: #8B0000;
+    background-color: #8b0000;
 }
